# FFmpegDemo

./: README.md  settings.gradle
camera2app/: build.gradle
camera2app/src/androidTest/java/com/example/camera2app/: ExampleInstrumentedTest.java
camera2app/src/main/: AndroidManifest.xml
camera2app/src/main/java/com/example/camera2app/: MainActivity.java
camera2app/src/main/res/layout/: activity_main.xml
camera2app/src/test/java/com/example/camera2app/: ExampleUnitTest.java
ffmpegapp/: build.gradle  proguard-rules.pro
ffmpegapp/src/androidTest/java/io/bird/sunny/ffmpegapp/: ExampleInstrumentedTest.java
ffmpegapp/src/main/: AndroidManifest.xml
ffmpegapp/src/main/java/io/bird/sunny/ffmpegapp/: MainActivity.java
ffmpegapp/src/main/res/layout/: activity_main.xml
ffmpegapp/src/main/res/values/: strings.xml
ffmpegapp/src/test/java/io/bird/sunny/ffmpegapp/: ExampleUnitTest.java
jniffmpeg/: CMakeLists.txt  build.gradle
jniffmpeg/src/androidTest/java/io/bird/sunny/ffmpegdemo/: ExampleInstrumentedTest.java
jniffmpeg/src/main/: AndroidManifest.xml
jniffmpeg/src/main/cpp/: avio_reading.c  avio_reading.h  decode_video.c  decode_video.h  demuxer.c  demuxer.h  ffmpeg-native.c  nativelog.h  parseh264.c
jniffmpeg/src/main/java/io/bird/sunny/ffmpegdemo/: FFmpengNative.java
jniffmpeg/src/test/java/io/bird/sunny/ffmpegdemo/: ExampleUnitTest.java
libffmpeg/lib/armeabi-v7a-neon/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
libffmpeg/lib/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
libffmpeg/lib/armeabi/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
libffmpeg/lib/x86/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
libffmpeg/lib/x86_64/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
